@@ -1,6 +1,6 @@
 = MaNGOS -- README =
 
-Copyright (c) 2005-2007 MaNGOS <http://www.mangosproject.org/>
+Copyright (C) 2005-2007 MaNGOS project <http://www.mangosproject.org/>
 
   MaNGOS is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -15,6 +15,16 @@ Copyright (c) 2005-2007 MaNGOS <http://www.mangosproject.org/>
   You should have received a copy of the GNU General Public License
   along with this program; if not, write to the Free Software
   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+  In addition, as a special exception, the MaNGOS project
+  gives permission to link the code of its release of MaNGOS with the
+  OpenSSL project's "OpenSSL" library (or with modified versions of it
+  that use the same license as the "OpenSSL" library), and distribute
+  the linked executables.  You must obey the GNU General Public License
+  in all respects for all of the code used other than "OpenSSL".  If you
+  modify this file, you may extend this exception to your version of the
+  file, but you are not obligated to do so.  If you do not wish to do
+  so, delete this exception statement from your version.
 
 Comments are welcome.
 
@@ -33,12 +43,15 @@ Documenation on various development related topics can be found in the doc/
 subdirectory, including Doxygen-generated API documentation.
 
 The required SQL files for creating the database backend are included in the
-sql/ subdirectory.
+sql/ subdirectory. In case you are upgrading from an older MaNGOS release,
+make sure you as well take a look at the SQL files in the sql/updates/ sub-
+directory.
 
 In order to build and install MaNGOS under Linux, follow the instructions
-described in the INSTALL file. To build MaNGOS on Windows, please see the
-win/ subdirectory. Project workspaces for Visual Studio .NET 2003 and Visual
-Studio .NET 2005 are available.
+described in the INSTALL file.
 
 In case you have checked out MaNGOS from the SubVersion repository, please run
-./reconf prior to building, as you may otherwise not be able to run a build.
+
+$ autoreconf --install --force
+
+prior to building, as you may otherwise not be able to run a build.
